# otus-rust-basic

./: .devcontainer.json  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  foo.txt
lesson17/: Cargo.toml
lesson17/src/: lib.rs  lifetime1.rs  lifetime2.rs  math_vector.rs
lesson19/: Cargo.toml
lesson19/src/: main.rs
lesson19/src/pm/: lib.rs
lesson23/: Cargo.toml
lesson23/src/: main.rs
lesson25/: Cargo.toml
lesson25/src/: lib.rs  main.rs
lesson27/: Cargo.toml
lesson27/src/: AnyEx.rs  Iter1.rs  LinkedList_v1.rs  LinkedList_v2.rs  any_ex.rs  lib.rs  linked_list_v1.rs  linked_list_v2.rs  linked_list_v3.rs  linked_list_v4.rs  linked_list_v5.rs  linked_list_v6.rs
lesson3/: Cargo.toml
lesson3/src/: main.rs
lesson30/: readme.md
lesson30/src/: lib.rs  main.rs
lesson34/: Cargo.toml  readme.md
lesson34/src/: constants.rs  core.rs  lib.rs  protocol.rs  ser_de.rs
lesson34/src/client/: client.rs
lesson34/src/lib/: constants.rs  core.rs  lib.rs  protocol.rs  ser_de.rs
lesson34/src/server/: server.rs
lesson37/: Cargo.toml  readme.md
lesson37/src/client/: client.rs
lesson37/src/lib/: bank.rs  core.rs  lib.rs  protocol.rs  ser_de.rs
lesson37/src/server/: server.rs
lesson38/: Cargo.toml  readme.md
lesson38/src/lib/: lib.rs  matrices.rs  matrix.rs  types.rs
lesson40/: Cargo.toml  readme.md
lesson40/src/lib/: bank.rs  core.rs  lib.rs  protocol.rs
lesson9/src/: lib.rs  main.rs
tokio-example-redis/: Cargo.toml
