[package]
name = "lesson40"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.43.0", features = ["full"] }
serde = {version = "1.0.217", features = ["derive"]}
bincode ={ version = "1.3.3"}

[lib]
name = "common"         # The name of the target.
path = "src/lib/lib.rs"
