[package]
name = "lesson40"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.3" }
thiserror = { version = "2.0" }
anyhow = "1.0"

[lib]
name = "common"         # The name of the target.
path = "src/lib/lib.rs"
